# nemodesk-it-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/_workflows_pending/: ci.yml
api/: __init__.py  demo_pipeline.py  server.py
api/ui/: index.html
configs/: config.yml  eval_config.yml
data/: sample_tickets.json
data/knowledge_base/: RB-001-outlook-crash.md  RB-002-vpn-connectivity.md  RB-003-password-reset.md  RB-004-laptop-hardware.md  RB-005-phishing-incident.md  RB-006-cloud-k8s.md  RB-007-database.md  RB-008-software-install.md
deck/: .gitignore  NemoDesk_Pitch_Deck.pptx  README.md  build_deck.js  package.json
docs/: ARCHITECTURE.md  PITCH_DECK.md
eval/: eval_dataset.json
scripts/: ci_checks.py  demo_batch.py
src/nemodesk/: __init__.py  models.py  register.py
src/nemodesk/tools/: __init__.py  classifier.py  escalation.py  kb_search.py  pii_redactor.py
tests/: test_tools.py
